FirstGitProj/src/objects/Warehouse__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatch_Email__c</fullName>
        <label>Dispatch Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Facility_Code__c</fullName>
        <label>Facility Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Facility (parent location) that this warehouse or plant belongs to</inlineHelpText>
        <label>Facility</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipName>Warehouses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hours_of_Operation__c</fullName>
        <label>Hours of Operation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Logistics_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who is the Logistics Coordinator for this Warehouse?</description>
        <inlineHelpText>Who is the Logistics Coordinator for this Warehouse?</inlineHelpText>
        <label>Logistics Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Warehouses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Obsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox of active/inactive plants exclusively for use in the warranty app</description>
        <inlineHelpText>Check this box if the warehouse or plant is no longer active.</inlineHelpText>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_1__c</fullName>
        <label>Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Plant_Code__c</fullName>
        <externalId>true</externalId>
        <label>Plant Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Description__c</fullName>
        <label>Plant Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Area</label>
        <referenceTo>Price_Area__c</referenceTo>
        <relationshipName>Warehouses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Code_External_Id__c</fullName>
        <description>This does not have to be visible on Warehouse page layout. It should match the Warehouse Code which is visible on the Warehouse page layout.</description>
        <externalId>true</externalId>
        <label>Plant Code External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Description__c</fullName>
        <description>The name or description of this warehouse/plant/facility.</description>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Manager_Email__c</fullName>
        <label>Plant Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Warehouse_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Plant</label>
    <listViews>
        <fullName>A2_Warehouses_Only</fullName>
        <columns>NAME</columns>
        <columns>Warehouse_Code_External_Id__c</columns>
        <columns>Warehouse_Description__c</columns>
        <columns>Logistics_Coordinator__c</columns>
        <columns>Dispatch_Email__c</columns>
        <columns>Phone_1__c</columns>
        <columns>Address_Line_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>1,2,3,4,5,6,7,8,9,0</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>H,D,L,W,P</value>
        </filters>
        <label>A2 - Warehouses Only</label>
    </listViews>
    <listViews>
        <fullName>A3_Facilities_Only</fullName>
        <columns>Facility_Code__c</columns>
        <columns>NAME</columns>
        <columns>Logistics_Coordinator__c</columns>
        <columns>State__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>1,2,3,4,5,6,7,8,9,0</value>
        </filters>
        <label>A3 - Facilities Only</label>
    </listViews>
    <listViews>
        <fullName>A4_SAP_Warehouses</fullName>
        <columns>NAME</columns>
        <columns>Warehouse_Code_External_Id__c</columns>
        <columns>Warehouse_Description__c</columns>
        <columns>Logistics_Coordinator__c</columns>
        <columns>Dispatch_Email__c</columns>
        <columns>State__c</columns>
        <columns>Address_Line_1__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>0</value>
        </filters>
        <label>A4 - All SAP Warehouses/Plants</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Warehouse_Description__c</columns>
        <columns>NAME</columns>
        <columns>Logistics_Coordinator__c</columns>
        <columns>Obsolete__c</columns>
        <columns>Warehouse_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Facility_Code__c</columns>
        <columns>Warehouse_Code_External_Id__c</columns>
        <columns>Warehouse_Manager_Email__c</columns>
        <columns>Dispatch_Email__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>A1- All Warehouses/Facilities</label>
    </listViews>
    <nameField>
        <label>Plant Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_Change_to_Warehouse_Code</fullName>
        <active>true</active>
        <description>Restrict user changes to warehouse code</description>
        <errorConditionFormula>AND(
ISCHANGED(Name),
ISCHANGED( Facility_Code__c ))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Warehouse Code may not be changed.</errorMessage>
    </validationRules>
</CustomObject>